--- a/yardiWeb/WebContent/WEB-INF/views/changePwd.html
+++ b/yardiWeb/WebContent/WEB-INF/views/changePwd.html
@@ -2,9 +2,142 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+  <title>Yardi Change Password</title>
+  
+  <!-- Bootstrap -->
+  <link href="../../resources/styles/bootstrap.min.css" rel="stylesheet" />
+  
 </head>
 <body>
-
+  <script src="../../resources/scripts/jquery-2.2.4.min.js"></script>
+  <script src="../../resources/scripts/bootstrap.min.js"></script>
+  <div class="container">
+    <div class="main">
+      <form class="form-horizontal" role="form">
+        <!-- Need Margin Before Here -->
+        <!-- Need Margin Before Here -->
+        <!-- Need Margin Before Here -->
+        <!-- Need Margin Before Here -->
+        <h4 class="col-sm-offset-3">Change Password</h4>
+        <p class="col-sm-offset-1">Your password has expired and must be changed before continuing</p>
+        <div class="form-group has-feedback">
+          <label for="username" class="col-sm-2 control-label">Username</label>
+          <div class="col-sm-3">
+            <div class="input-group">
+              <!-- using font-awesome -->
+              <!--
+              -->
+              <span class="input-group-addon"><i class="glyphicon glyphicon-user" ></i></span>
+              <input type="text" class="form-control" name="username" id="username" required placeholder="User name"/>
+            </div>
+            <span class="glyphicon glyph_icon form-control-feedback"></span>
+          </div>
+        </div>          
+        <div class="form-group has-feedback">
+          <label for="oldPassword" class="col-sm-2 control-label">Old Password</label>
+          <div class="col-sm-3">
+            <div class="input-group">
+              <!-- using font-awesome -->
+              <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+              <input type="password" class="form-control" name="oldPassword" id="oldPassword" 
+                     required placeholder="Old Password"/>
+            </div>
+            <span class="glyphicon glyph_icon form-control-feedback"></span>
+          </div>
+        </div>          
+        <div class="form-group has-feedback">
+          <label for="newPassword" class="col-sm-2 control-label">New Password</label>
+          <div class="col-sm-3">
+            <div class="input-group">
+              <!-- using font-awesome -->
+              <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+              <input type="password" class="form-control" name="newPassword" id="newPassword" 
+                     required placeholder="New Password"/>
+            </div>
+            <span class="glyphicon glyph_icon form-control-feedback"></span>
+          </div>
+        </div>          
+        <div class="form-group has-feedback">
+          <label for="verifyPassword" class="col-sm-2 control-label">Verify Password</label>
+          <div class="col-sm-3">
+            <div class="input-group">
+              <!-- using font-awesome -->
+              <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+              <input type="password" class="form-control" name="verifyPassword" id="verifyPassword" required 
+                     placeholder="Verify Password"/>
+            </div>
+            <span class="glyphicon glyph_icon form-control-feedback"></span>
+            <p></p>
+            <button type="button" class="btn btn-success" id="login">Login</button>
+          </div>
+        </div>          
+        <div class="col-sm-offset-1" style="color:red;" id="form-feedback"></div>
+      </form>
+    </div>
+  </div>
+<script>
+  $(function () {
+    $('#login').click(function () {
+      $('#form-feedback').text('');
+      var formValid = true;
+      //iterate over all the input controls
+      $('input').each(function () {
+        var formGroup = $(this).parents('.form-group');
+        var glyphIcon = formGroup.find('.glyphicon');
+        var obj = $(this);
+        if (this.checkValidity()) {
+          //show green, remove red
+          formGroup.addClass('has-success').removeClass('has-error');
+          //show check, remove X
+          glyphIcon.addClass('glyphicon-ok').removeClass('glyphicon-remove');
+        } else {
+          // show red, remove green
+          formGroup.addClass('has-error').removeClass('has-success');
+          // show x, remove check
+          glyphIcon.addClass('glyphicon-remove').removeClass('glyphicon-ok');
+          //mark form invalid
+          formValid = false;
+        }
+      });
+      var oldPwd = $('[name="oldPassword"]').val();
+      var newPwd = $('[name="newPassword"]').val();
+      var verifyPwd = $('[name="verifyPassword"]').val()
+      
+      if (formValid) {
+        
+        if ($('[name="oldPassword"]').val() === $('[name="newPassword"]').val()) {
+          var formGroup = $('[name="oldPassword"]').parents('.form-group');
+          var glyphIcon = formGroup.find('.glyphicon');
+          formGroup.addClass('has-error').removeClass('has-success');
+          glyphIcon.addClass('glyphicon-remove').removeClass('glyphicon-ok');
+          
+          var formGroup = $('[name="newPassword"]').parents('.form-group');
+          var glyphIcon = formGroup.find('.glyphicon');
+          formGroup.addClass('has-error').removeClass('has-success');
+          glyphIcon.addClass('glyphicon-remove').removeClass('glyphicon-ok');
+          $('#form-feedback').text('The new pasword is the same as the old password');
+          var formValid = false;
+        }
+      }
+      
+      if (formValid) {
+        
+        if ($('[name="newPassword"]').val() !== $('[name="verifyPassword"]').val()) {
+          var formGroup = $('[name="newPassword"]').parents('.form-group');
+          var glyphIcon = formGroup.find('.glyphicon');
+          formGroup.addClass('has-error').removeClass('has-success');
+          glyphIcon.addClass('glyphicon-remove').removeClass('glyphicon-ok');
+          
+          var formGroup = $('[name="verifyPassword"]').parents('.form-group');
+          var glyphIcon = formGroup.find('.glyphicon');
+          formGroup.addClass('has-error').removeClass('has-success');
+          glyphIcon.addClass('glyphicon-remove').removeClass('glyphicon-ok');
+          $('#form-feedback').text('New pasword and verify password are not the same');
+          var formValid = false;
+        }
+      }
+    });
+  });
+</script>
 </body>
 </html>
