--- a/yardiWeb/WebContent/WEB-INF/views/changePwd.html
+++ b/yardiWeb/WebContent/WEB-INF/views/changePwd.html
@@ -13,11 +13,7 @@
   <script src="../../resources/scripts/bootstrap.min.js"></script>
   <div class="container">
     <div class="main">
-      <form class="form-horizontal" role="form">
-        <!-- Need Margin Before Here -->
-        <!-- Need Margin Before Here -->
-        <!-- Need Margin Before Here -->
-        <!-- Need Margin Before Here -->
+      <form class="form-horizontal" role="form" style="margin-top: 100px;">
         <h4 class="col-sm-offset-3">Change Password</h4>
         <p class="col-sm-offset-1">Your password has expired and must be changed before continuing</p>
         <div class="form-group has-feedback">
@@ -71,8 +67,8 @@
             <button type="button" class="btn btn-success" id="login">Login</button>
           </div>
         </div>          
-        <div class="col-sm-offset-1" style="color:red;" id="form-feedback"></div>
       </form>
+      <div class="col-sm-offset-2" style="color:red;" id="form-feedback"></div>
     </div>
   </div>
 <script>
@@ -85,36 +81,33 @@
         var formGroup = $(this).parents('.form-group');
         var glyphIcon = formGroup.find('.glyphicon');
         var obj = $(this);
+        
         if (this.checkValidity()) {
-          //show green, remove red
-          formGroup.addClass('has-success').removeClass('has-error');
-          //show check, remove X
-          glyphIcon.addClass('glyphicon-ok').removeClass('glyphicon-remove');
+          addAndRemoveClasses($(this), '.form-group', '.glyph_icon', 
+                              'has-success',  'has-error',
+                              'glyphicon-ok', 'glyphicon-remove');
         } else {
-          // show red, remove green
-          formGroup.addClass('has-error').removeClass('has-success');
-          // show x, remove check
-          glyphIcon.addClass('glyphicon-remove').removeClass('glyphicon-ok');
-          //mark form invalid
+          addAndRemoveClasses($(this), '.form-group', '.glyph_icon', 
+                              'has-error',        'has-success',
+                              'glyphicon-remove', 'glyphicon-ok' );
           formValid = false;
         }
       });
+
       var oldPwd = $('[name="oldPassword"]').val();
       var newPwd = $('[name="newPassword"]').val();
-      var verifyPwd = $('[name="verifyPassword"]').val()
+      var verifyPwd = $('[name="verifyPassword"]').val();
       
       if (formValid) {
         
         if ($('[name="oldPassword"]').val() === $('[name="newPassword"]').val()) {
-          var formGroup = $('[name="oldPassword"]').parents('.form-group');
-          var glyphIcon = formGroup.find('.glyphicon');
-          formGroup.addClass('has-error').removeClass('has-success');
-          glyphIcon.addClass('glyphicon-remove').removeClass('glyphicon-ok');
+          addAndRemoveClasses('[name="oldPassword"]', '.form-group', '.glyphicon', 
+                              'has-error', 'has-success', 
+                              'glyphicon-remove', 'glyphicon-ok');
           
-          var formGroup = $('[name="newPassword"]').parents('.form-group');
-          var glyphIcon = formGroup.find('.glyphicon');
-          formGroup.addClass('has-error').removeClass('has-success');
-          glyphIcon.addClass('glyphicon-remove').removeClass('glyphicon-ok');
+          addAndRemoveClasses('[name="newPassword"]', '.form-group', '.glyphicon', 
+                              'has-error', 'has-success', 
+                              'glyphicon-remove', 'glyphicon-ok');
           $('#form-feedback').text('The new pasword is the same as the old password');
           var formValid = false;
         }
@@ -123,21 +116,84 @@
       if (formValid) {
         
         if ($('[name="newPassword"]').val() !== $('[name="verifyPassword"]').val()) {
-          var formGroup = $('[name="newPassword"]').parents('.form-group');
-          var glyphIcon = formGroup.find('.glyphicon');
-          formGroup.addClass('has-error').removeClass('has-success');
-          glyphIcon.addClass('glyphicon-remove').removeClass('glyphicon-ok');
-          
-          var formGroup = $('[name="verifyPassword"]').parents('.form-group');
-          var glyphIcon = formGroup.find('.glyphicon');
-          formGroup.addClass('has-error').removeClass('has-success');
-          glyphIcon.addClass('glyphicon-remove').removeClass('glyphicon-ok');
-          $('#form-feedback').text('New pasword and verify password are not the same');
+          addAndRemoveClasses('[name="newPassword"]', '.form-group', '.glyphicon', 
+                              'has-error', 'has-success', 
+                              'glyphicon-remove', 'glyphicon-ok');
+          addAndRemoveClasses('[name="verifyPassword"]', '.form-group', '.glyphicon', 
+                              'has-error', 'has-success', 
+                              'glyphicon-remove', 'glyphicon-ok');
+          $('#form-feedback').text('New pasword and verify passwords do not match');
           var formValid = false;
         }
       }
+      
+      if (formValid) {
+        var userName = $('#username').val();
+        var password = $('#password').val();
+        var formItems = {
+          "userName"       : userName,
+          "password"       : password,
+          "newPassword"    : newPassword,
+          "msgID"          : '',
+          "msgDescription" : '',
+          "chgPwd"         : 'true'
+        }
+            
+        $.post('doLogin', 
+        {
+          formData : JSON.stringify(formItems)
+        })
+        .done(function(data) {
+          $('#form-feedback').text(data.msgDescription);
+            
+          if (data.msgID === 'YRD0001') {
+            $('input').each(function () {
+              addAndRemoveClasses('[name="username"]', '.form-group', '.glyphicon', 
+                                  'has-error', 'has-success', 
+                                  'glyphicon-remove', 'glyphicon-ok');
+              addAndRemoveClasses('name="oldPassword"]', '.form-group', '.glyphicon', 
+                                  'has-error', 'has-success', 
+                                  'glyphicon-remove', 'glyphicon-ok');
+              formValid = false;
+            });
+          }
+          
+          if (   data.msgID === 'YRD0005' || data.msgID === 'YRD0006' 
+              || data.msgID === 'YRD0007' || data.msgID === 'YRD0008' 
+              || data.msgID === 'YRD0009' || data.msgID === 'YRD000A'  ) {
+            addAndRemoveClasses('[name="newPassword"]', '.form-group', '.glyphicon', 
+                                'has-error', 'has-success', 
+                                'glyphicon-remove', 'glyphicon-ok');
+            formValid = false;
+          }
+
+          if (data.msgID === 'YRD000B' || data.msgID === 'YRD000C') {
+            $('input').each(function () {
+              formValid = false;
+              var formGroup = $(this).parents('.form-group');
+              var glyphIcon = formGroup.find('.glyph_icon');
+              var obj = $(this);
+              formGroup.removeClass('has-error');
+              formGroup.removeClass('has-success');
+              glyphIcon.removeClass('glyphicon-ok');
+              glyphIcon.removeClass('glyphicon-remove');
+            });
+          }
+        });
+      }
     });
   });
+  
+  function addAndRemoveClasses (
+    formGroupTarget, parentsTarget, glyphTarget,
+    formAddClass,  formRemoveClass, 
+    glyphAddClass, glyphRemoveClass) {
+
+    var formGroup = $(formGroupTarget).parents(parentsTarget);
+    var glyphIcon = formGroup.find(glyphTarget);  
+    formGroup.addClass(formAddClass).removeClass(formRemoveClass);
+    glyphIcon.addClass(glyphAddClass).removeClass(glyphRemoveClass);
+  }
 </script>
 </body>
 </html>
