--- a/WebContent/views/QSECOFR_Main.html
+++ b/WebContent/views/QSECOFR_Main.html
@@ -108,5 +108,37 @@
     </div>
   </div>
 </div>
+  <a data-toggle="collapse" href="#misc" aria-expanded="false" aria-controls="misc"><h2>Misc.<span class="caret" /></h2></a>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="collapse" id="misc">
+        <div class="card card-body">
+          <ul>
+            <li id="GMView"><a href="#">View Group Master</a></li>
+            <li id="GMChange"><a href="#">Group Master Maintenance</a></li>
+            <li id="PPView"><a href="#">View Password Policy</a></li>
+            <li id="PPChange"><a href="#">Password Policy Maintenance</a></li>
+            <li id="STView"><a href="#">View Sessions Table</a></li>
+            <li id="STChange"><a href="#">Sessions Table Maintenance</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a data-toggle="collapse" href="#permissions" aria-expanded="false" aria-controls="misc"><h2>Permissions<span class="caret" /></h2></a>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="collapse" id="permissions">
+        <div class="card card-body">
+          <ul>
+            <li id="PMView"><a href="#">View Permissions Master</a></li>
+            <li id="PMChange"><a href="#">Permissions Master Maintenance</a></li>
+            <li id="GMView"><a href="#">View Group Permissions</a></li>
+            <li id="GMChange"><a href="#">Group Permissions Maintenance</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
