--- a/WebContent/views/QSECOFR_Main.html
+++ b/WebContent/views/QSECOFR_Main.html
@@ -91,7 +91,7 @@
 <a data-toggle="collapse" href="#UserOptions" aria-expanded="false" aria-controls="UserOptions"><h2>User Options<span class="caret" /></h2></a>
 <div class="row">
   <div class="col-sm-6">
-    <div class="collapse" id="UserOptions">
+    <div class="collapse multi-collapse" id="UserOptions">
       <div class="card card-body">
         <ul>
           <li id="UPView"><a href="#">View User Profile</a></li>
@@ -111,7 +111,7 @@
   <a data-toggle="collapse" href="#misc" aria-expanded="false" aria-controls="misc"><h2>Misc.<span class="caret" /></h2></a>
   <div class="row">
     <div class="col-sm-6">
-      <div class="collapse" id="misc">
+      <div class="collapse multi-collapse" id="misc">
         <div class="card card-body">
           <ul>
             <li id="GMView"><a href="#">View Group Master</a></li>
@@ -128,7 +128,7 @@
   <a data-toggle="collapse" href="#permissions" aria-expanded="false" aria-controls="misc"><h2>Permissions<span class="caret" /></h2></a>
   <div class="row">
     <div class="col-sm-6">
-      <div class="collapse" id="permissions">
+      <div class="collapse multi-collapse" id="permissions">
         <div class="card card-body">
           <ul>
             <li id="PMView"><a href="#">View Permissions Master</a></li>
