--- a/WebContent/views/QSECOFR_Main.html
+++ b/WebContent/views/QSECOFR_Main.html
@@ -271,7 +271,7 @@
     });
   });
   
-  newFrame(newFrame) {
+  function newFrame(newFrame) {
     $('html').html(newFrame);
     console.log(' nextFrame=' + newFrame);
     parent.frame = newFrame;
