--- a/WebContent/views/userProfile_CRUD.html
+++ b/WebContent/views/userProfile_CRUD.html
@@ -468,8 +468,11 @@
         up:   "fa fa-arrow-up",
         down: "fa fa-arrow-down"
       }
-    });  
-
+    }); 
+    
+    $('.navbar-brand').click(function() {
+      newFrame('views/QSECOFR_Main.html');
+    }); 
     $('#UPView').click(function() {
       newFrame('views/userProfile_CRUD.html?mode=view');
     });
