--- a/WebContent/views/passwordPolicy_CRUD.html
+++ b/WebContent/views/passwordPolicy_CRUD.html
@@ -170,6 +170,9 @@
   $(function () {
     var viewMode = false;
     $('#title-loginID').text('XXXXXXXXXXXXXXX');
+    $('.navbar-brand').click(function() {
+      newFrame('views/QSECOFR_Main.html');
+    }); 
     $('#UPView').click(function() {
       newFrame('views/userProfile_CRUD.html?mode=view');
     });
