Store the user name in WEBCONTENT\index.html
Pages that need to display user name will set the text of #title-loginID to parent.userName

Delete calls to getSessionInfo and the function getSessionInfo

Servlet SRC\COM\YARDI\USERSERVICES\SessionInfoService is not needed

Entities now reference the schema="DB2ADMIN" on the @Table annotation

***HTML***
WEBCONTENT\
index.html
yardiLogin.html
WEBCONTENT\
VIEWS\
groupMaster_CRUD.html
groupPermissions_CRUD.html
passwordPolicy_CRUD.html
permissionsMaster_CRUD.html
QSECOFR_Main.html
selectGroup.html
sessions_CRUD.html
uniqueTokens_CRUD.html
userGroups_CRUD.html
userProfile_CRUD.html

***Entities***
EJBMODULE\
COM\YARDI\EJB\
Group_Permissions.java
Groups_Master.java
Permissions_Master.java
Pp_Pwd_Policy.java
Sessions_Table.java
Unique_Tokens.java
User_Groups.java
User_Profile.java

--- a/WebContent/views/QSECOFR_Main.html
+++ b/WebContent/views/QSECOFR_Main.html
@@ -222,9 +222,8 @@
     </div>
   </div>
 <script>
-  var userID = ' ';
   $(function () {
-    getSessionInfo('sessionInfo', '', '', '', ''); //request session info
+    $('#title-loginID').text(parent.userName);
     $('li#UPView').click(function() {
       newFrame('views/userProfile_CRUD.html?mode=view');
     });
@@ -280,30 +279,6 @@
     console.log(' nextFrame=' + newFrame);
     parent.frame = newFrame;
     parent.nextFrame();
-  }
-
-  function getSessionInfo(requestType, user, session, token, requestURL) {
-    var sessionInfo = {
-      request      : requestType,
-      userID       : user,
-      sessionID    : session,
-      sessionToken : token,
-      lastRequest  : requestURL,
-      lastActive   : Date.now()
-    }
-    var parms = JSON.stringify(sessionInfo);
-    $.ajax({
-      type:     'POST',
-      url:      '../SessionInfo',
-      data:     parms,
-      dataType: "json",
-      success:  function(data) {
-        document.getElementById('title-loginID').innerHTML=data.userID;
-        console.log("data.userID=" + data.userID);
-        userID = data.userID;
-        console.log('userID=' + userID);
-      }
-    });
   }
 </script>
 </body>
